--- a/frontend/login.html
+++ b/frontend/login.html
@@ -31,7 +31,7 @@
   </div>
 
   <script>
-    const API_BASE = "https://pentaworlds.onrender.com"; // Replace with your actual API base
+    const API_BASE = "https://pentaworlds.onrender.com";
 
     async function signup() {
       const username = document.getElementById("signup-username").value;
