--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pentaworlds Login</title>
+  <title>Pentaworlds Signup</title>
   <style>
     body { font-family: sans-serif; padding: 2em; background: #111; color: #eee; }
     input, button { padding: 0.5em; margin: 0.5em 0; width: 100%; }
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Pentaworlds Login</h1>
+    <h1>Pentaworlds Signup</h1>
 
     <h3>Sign Up</h3>
     <input id="signup-username" placeholder="Username" />
