--- a/frontend/login.html
+++ b/frontend/login.html
@@ -10,24 +10,17 @@
   	<div class="img"></div>
 	<div class="content">
 		<h1>Create new Account</h1>
-		<div class="form">
 			<form action="">
 				<div class="container">
-					<h5>Email</h5>
-					<input type="text" id="login-username" placeholder="Enter your username">
+					<h5>Username</h5>
+					<input type="text" id="login-username" name="username" placeholder="Enter your username">
 					<h5>Password</h5>
 					<div class="password">
-						<input type="password" id="login-password" placeholder="Enter your password">
-						<ion-icon class="eye" id="eyeon" name="eye-outline"></ion-icon>
-						<ion-icon class="eye" id="eyeoff" name="eye-off-outline"></ion-icon>
+						<input type="password" id="login-password" name="password" placeholder="Enter your password">
 					</div>
-					<input type="submit" href="index.html" value="Create new account" onclick="login()">
-					<div class="checkbox">
-						<input type="checkbox">
-						<h5 class="rembember-me">Remember me for 30 days</h5>
+					<input type="submit" href="index.html" value="Log in" onclick="login()">
 					</div>
 				</div>
-			</form>
 		</div>
 	</div>
 
