--- a/frontend/login.html
+++ b/frontend/login.html
@@ -9,8 +9,8 @@
 <body>
   	<div class="img"></div>
 	<div class="content">
-		<h1>Create new Account</h1>
-			<form action="">
+		<h1>Log in</h1>
+		<div class="form">
 				<div class="container">
 					<h5>Username</h5>
 					<input type="text" id="login-username" name="username" placeholder="Enter your username">
