--- a/frontend/login.html
+++ b/frontend/login.html
@@ -9,7 +9,7 @@
 <body>
   	<div class="img"></div>
 	<div class="content">
-		<h1>Log in</h1>
+		<h1 style="margin-bottom: 50px;">Log in</h1>
 		<div class="form">
 				<div class="container">
 					<h5>Username</h5>
@@ -19,7 +19,7 @@
 						<input type="password" id="login-password" name="password" placeholder="Enter your password">
 					</div>
 					<input type="submit" href="index.html" value="Log in" onclick="login()">
-          <a href="signup.html">Don't have an account? <span style="color:rgb(0, 116, 212)">Sign up</span></a>
+          <a href="/signup" style="text-decoration: none;color: rgb(0, 0, 0, 0.2);">Don't have an account? <span style="color:rgb(0, 116, 212)">Sign up</span></a>
 					</div>
 				</div>
 		</div>
