--- a/frontend/login.html
+++ b/frontend/login.html
@@ -28,8 +28,7 @@
   <script>
     const API_BASE = "https://pentaworlds.onrender.com";
 
-    async function login(event) {
-      event.preventDefault(); // zamezí reloadu
+    async function login() {
 
       const username = document.getElementById("login-username").value;
       const password = document.getElementById("login-password").value;
