--- a/frontend/login.html
+++ b/frontend/login.html
@@ -9,7 +9,7 @@
 <body>
   	<div class="img"></div>
 	<div class="content">
-		<h1 style="margin-bottom: 50px;">Log in</h1>
+		<h1 style="margin-bottom: 50px; font-weight: 400;">Log in</h1>
 		<div class="form">
 				<div class="container">
 					<h5>Username</h5>
