--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="login.css">
   <title>Pentaworlds Signup</title>
   <style>
     body { font-family: sans-serif; padding: 2em; background: #111; color: #eee; }
@@ -16,10 +17,23 @@
     <h1>Pentaworlds Signup</h1>
 
     <h3>Sign Up</h3>
-    <input id="signup-username" placeholder="Username" />
-    <input id="signup-password" type="password" placeholder="Password" />
-    <button onclick="signup()">Create Account</button>
   </div>
+  
+	<div class="content">
+		<h1 style="margin-bottom: 50px; font-weight: 400;">Log in</h1>
+		<div class="form">
+				<div class="container">
+					<h5>Username</h5>
+					<input type="text" id="signup-username" name="username" placeholder="Enter your username">
+					<h5>Password</h5>
+					<div class="password">
+						<input type="password" id="signup-password" name="password" placeholder="Enter your password">
+					</div>
+					<input type="submit" href="index.html" value="Sign up" onclick="signup()">
+          <a href="/signup" style="text-decoration: none;color: rgb(0, 0, 0, 0.2);">Don't have an account? <span style="color:rgb(0, 116, 212)">Sign up</span></a>
+					</div>
+				</div>
+		</div>
 
   <script>
     const API_BASE = "https://pentaworlds.onrender.com";
