--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -10,7 +10,7 @@
   	<div class="img"></div>
 
 	<div class="content">
-		<h1 style="margin-bottom: 50px; font-weight: 400;">Sign up/h1>
+		<h1 style="margin-bottom: 50px; font-weight: 400;">Sign up</h1>
 		<div class="form">
 				<div class="container">
 					<h5>Username</h5>
