--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -7,7 +7,7 @@
   <title>Pentaworlds Signup</title>
 </head>
 <body>
-  	<div class="img"></div>
+  	<div class="img2"></div>
 
 	<div class="content">
 		<h1 style="margin-bottom: 50px; font-weight: 400;">Sign up</h1>
@@ -20,7 +20,7 @@
 						<input type="password" id="signup-password" name="password" placeholder="Enter your password">
 					</div>
 					<input type="submit" href="index.html" value="Sign up" onclick="signup()">
-          <a href="/signup" style="text-decoration: none;color: rgb(0, 0, 0, 0.2);">Don't have an account? <span style="color:rgb(0, 116, 212)">Sign up</span></a>
+          <a href="/signup" style="text-decoration: none;color: rgb(0, 0, 0, 0.2);">Alreadey have an account? <span style="color:rgb(0, 116, 212)">Log in</span></a>
 					</div>
 				</div>
 		</div>
