--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="login.html"><button>Sign up</button></a>
+        <a href="/signup"><button>Sign up</button></a>
     </div>
 </body>
 </html>
